<resources>
    <string name="app_name">Instagram 2.0</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="logo_platzigram">Logo Platzigram</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">Ingresar</string>
    <string name="dont_have_account">No tienes Cuenta?, </string>
    <string name="create_here">Crea una aqui</string>
    <string name="hint_email">Correo</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="text_button_create_account">Crear Cuenta</string>
    <string name="toolbar_title_create_account">Crear Cuenta</string>
    <string name="username_card">Lucas Suarez</string>
    <string name="firstword_card">Hace</string>
    <string name="timecard_card">4 dias</string>
    <string name="likenumber_card">10 Me gusta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_home">Home</string>
    <string name="tab_profile">Perfil</string>
    <string name="secondword_detail">Me gusta</string>
    <string name="titleimage">\"Todo copa en la playa\"</string>
    <string name="lorem">In dolor tortor, facilisis at augue ultricies, interdum porta enim. Pellentesque efficitur nibh ut lectus convallis, volutpat tincidunt mauris dictum. Suspendisse libero lorem, varius vel mollis vel, commodo vel nibh. Mauris quis consectetur sapien. Nulla sed dignissim neque. Phasellus sit amet nulla convallis nibh porttitor aliquet. Sed at venenatis augue. Donec molestie elit dui, vitae venenatis nibh volutpat non. Maecenas quis blandit lorem. Proin efficitur turpis et ante gravida, egestas mollis neque molestie.</string>
    <string name="transitionname_picture">transitionnamepicture</string>
</resources>
